# famacia-digital-app

./: .gitignore  Cargo.toml  index.html  libman.json  styles.css
src/: app.rs  data.rs  main.rs  routes.rs  test.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  services.rs
src/components/: button.rs  card.rs  input.rs  loading.rs  logo.rs  medication_card.rs  medication_search.rs  mod.rs  navbar.rs  navbar_button.rs  pharmacy_card.rs  pharmacy_search.rs  screen_center.rs  screen_padding.rs  spacer.rs  stock_card.rs  title.rs  toast.rs
src/hooks/: medication.rs  mod.rs  pharmacy.rs  stock.rs  toast_hook.rs
src/screens/: login.rs  medication.rs  mod.rs  pharmacies.rs  pharmacy.rs  search.rs
