[package]
name = "farmacia-digital-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
yew-router = "0.18.0"
stylist = { version = "0.13.0", features = ["yew"] }
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
log = "0.4.21"
console_log = "1.0.0"

[workspace]
members = ["src-tauri"]
